admin reg_member update

--- a/src/templates/admin_base.html
+++ b/src/templates/admin_base.html
@@ -125,7 +125,7 @@
                     <ul class="nav-right">
                         <li class="user-profile header-notification">
                             <a href="#!" class="waves-effect waves-light">
-                                <img src="{% static 'assets1/images/avatar-1.png' %}" class="img-radius"
+                                <img src="{% static 'assets1/images/admin logo.jpeg' %}" class="img-radius"
                                      alt="">
                                 <span>Admin</span>
                                 <i class="ti-angle-down"></i>
@@ -288,18 +288,19 @@
                                 <a href="javascript:void(0)" class="waves-effect waves-dark">
                                     <span class="pcoded-micon"><i class="ti-layers"></i></span>
                                     <span class="pcoded-mtext"
-                                          data-i18n="nav.basic-components.main"> Registered User</span>
+                                          data-i18n="nav.basic-components.main"> Registered Users</span>
                                     <span class="pcoded-mcaret"></span>
                                 </a>
                                 <ul class="pcoded-submenu">
                                     <li class=" ">
-                                        <a href="/reg_user/" class="waves-effect waves-dark">
+                                        <a href="/reg_member/" class="waves-effect waves-dark">
                                             <span class="pcoded-micon"><i class="ti-angle-right"></i></span>
-                                            <span class="pcoded-mtext" data-i18n="nav.basic-components.breadcrumbs">View Reg User</span>
+                                            <span class="pcoded-mtext" data-i18n="nav.basic-components.breadcrumbs">View Reg Member</span>
                                             <span class="pcoded-mcaret"></span>
                                         </a>
                                     </li>
                                 </ul>
+                                
                             </li>
                             <li class="pcoded-hasmenu">
                                 <a href="javascript:void(0)" class="waves-effect waves-dark">
