--- a/src/templates/trainer_login.html
+++ b/src/templates/trainer_login.html
@@ -28,7 +28,7 @@
                         <input type="password" id="password" name="password" class="form-control" placeholder="Enter Password" required>
                     </div>
                     <button type="submit" class="btn btn-warning w-100">Sign In</button>
-                    <p class="text-center text-muted mt-3">Don't have an account? <a href="{% url 'registration' %}" class="text-warning">Register Here</a></p>
+                    <p class="text-center text-muted mt-3">Don't have an account? <a href="{% url 'trainer_registration' %}" class="text-warning">Register Here</a></p>
                 </form>
             </div>
         </div>
