--- a/src/templates/admin_base.html
+++ b/src/templates/admin_base.html
@@ -300,7 +300,15 @@
                                         </a>
                                     </li>
                                 </ul>
-                                
+                                <ul class="pcoded-submenu">
+                                    <li class=" ">
+                                        <a href="/reg_trainer/" class="waves-effect waves-dark">
+                                            <span class="pcoded-micon"><i class="ti-angle-right"></i></span>
+                                            <span class="pcoded-mtext" data-i18n="nav.basic-components.breadcrumbs">View Reg Trainers</span>
+                                            <span class="pcoded-mcaret"></span>
+                                        </a>
+                                    </li>
+                                </ul>
                             </li>
                             <li class="pcoded-hasmenu">
                                 <a href="javascript:void(0)" class="waves-effect waves-dark">
