--- a/src/templates/trainer_login.html
+++ b/src/templates/trainer_login.html
@@ -20,8 +20,8 @@
                 <form method="post" class="needs-validation" novalidate>
                     {% csrf_token %}
                     <div class="mb-3">
-                        <label for="email" class="form-label">Email:</label>
-                        <input type="email" id="email" name="email" class="form-control" placeholder="Enter Email" required>
+                        <label for="username" class="form-label">Email:</label>
+                        <input type="username" id="username" name="username" class="form-control" placeholder="Enter Email" required>
                     </div>
                     <div class="mb-3">
                         <label for="password" class="form-label">Password:</label>
