--- a/src/templates/admin/reg_trainer.html
+++ b/src/templates/admin/reg_trainer.html
@@ -106,9 +106,9 @@
                                                 <tr>
                                                     <td><input type="checkbox" class="select-trainer" data-trainer-id="{{ trainer.id }}"></td> <!-- Individual trainer checkbox -->
                                                     <th scope="row">{{ forloop.counter }}</th>
-                                                    <td>{{ trainer.user.first_name }}</td>
-                                                    <td>{{ trainer.user.last_name }}</td>
-                                                    <td>{{ trainer.user.email }}</td>
+                                                    <td>{{ trainer.first_name }}</td>
+                                                    <td>{{ trainer.last_name }}</td>
+                                                    <td>{{ trainer.email }}</td>
                                                     <td>{{ trainer.phone }}</td>
                                                     <td>{{ trainer.experience }}</td>
                                                     <td>
