trainer page frontend

--- a/src/templates/Trainers/trainer_page.html
+++ b/src/templates/Trainers/trainer_page.html
@@ -1,3 +1,4 @@
+{% extends 'trainerheader.html' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -142,3 +143,5 @@
     </main>
 </body>
 </html>
+
+
