--- a/src/templates/Trainers/trainer_page.html
+++ b/src/templates/Trainers/trainer_page.html
@@ -1,4 +1,7 @@
 {% extends 'trainerheader.html' %}
+{% load static %}
+
+{% block main_content %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,7 +11,7 @@
     <link rel="stylesheet" href="styles.css">
     <style>
         body {
-            background-image :url(./static/assets/images/guygym.jpg);  
+            background-image :url(.src/static/assets/images/guygym.jpg);  
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -78,70 +81,76 @@
     </style>
 </head>
 <body>
-    <header>
-        <div class="navbar">
-            <div class="menu-icon">&#9776; Gym Management System</div>
-            <div class="nav-buttons">
-                <button>Classes</button>
-                <button>Contact</button>
-                <div class="profile-icon">
-                    <img src="profile-icon.png" alt="Profile">
-                    Profile
-                </div>
-            </div>
-        </div>
-    </header>
     <main>
         <div class="dashboard">
             <h2><span class="highlight">Welcome</span> Trainer!!</h2>
             <p>Today's classes</p>
-            <div class="class-schedule">
-                <h3>Gym class</h3>
-                <table>
-                    <tr>
-                        <th>Day</th>
-                        <th>Time</th>
-                        <th>Member Details</th>
-                    </tr>
-                    <tr>
-                        <td>Sunday</td>
-                        <td><strong>8:00 am</strong></td>
-                        <td>Suyog Magar</td>
-                    </tr>
-                    <tr>
-                        <td>Monday</td>
-                        <td>9:00 am</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>Tuesday</td>
-                        <td>11:00 am</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>Wednesday</td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>Thursday</td>
-                        <td>10:00 am</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>Friday</td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>Saturday</td>
-                        <td colspan="2">Rest</td>
-                    </tr>
-                </table>
+            <div class="row">
+                <div class="col-lg-6 offset-lg-3">
+                    <div class="section-heading dark-bg">
+                        <h2>Classes <em>Schedule</em></h2>
+                        <img src="assets/images/womengym.jpg" alt="">
+                        <p>Nunc urna sem, laoreet ut metus id, aliquet consequat magna. Sed viverra ipsum dolor, ultricies
+                            fermentum massa consequat eu.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="filters">
+                        <ul class="schedule-filter">
+                            <li class="active" data-tsfilter="monday">Monday</li>
+                            <li data-tsfilter="tuesday">Tuesday</li>
+                            <li data-tsfilter="wednesday">Wednesday</li>
+                            <li data-tsfilter="thursday">Thursday</li>
+                            <li data-tsfilter="friday">Friday</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-10 offset-lg-1">
+                    <div class="schedule-table filtering">
+                        <table>
+                            <tbody>
+                            <tr>
+                                <td class="day-time">Fitness Class</td>
+                                <td class="monday ts-item show" data-tsmeta="monday">10:00AM - 11:30AM</td>
+                                <td class="tuesday ts-item" data-tsmeta="tuesday">2:00PM - 3:30PM</td>
+                                <td>William G. Stewart</td>
+                            </tr>
+                            <tr>
+                                <td class="day-time">Muscle Training</td>
+                                <td class="friday ts-item" data-tsmeta="friday">10:00AM - 11:30AM</td>
+                                <td class="thursday friday ts-item" data-tsmeta="thursday" data-tsmeta="friday">2:00PM -
+                                    3:30PM
+                                </td>
+                                <td>Paul D. Newman</td>
+                            </tr>
+                            <tr>
+                                <td class="day-time">Body Building</td>
+                                <td class="tuesday ts-item" data-tsmeta="tuesday">10:00AM - 11:30AM</td>
+                                <td class="monday ts-item show" data-tsmeta="monday">2:00PM - 3:30PM</td>
+                                <td>Boyd C. Harris</td>
+                            </tr>
+                            <tr>
+                                <td class="day-time">Yoga Training Class</td>
+                                <td class="wednesday ts-item" data-tsmeta="wednesday">10:00AM - 11:30AM</td>
+                                <td class="friday ts-item" data-tsmeta="friday">2:00PM - 3:30PM</td>
+                                <td>Hector T. Daigle</td>
+                            </tr>
+                            <tr>
+                                <td class="day-time">Advanced Training</td>
+                                <td class="thursday ts-item" data-tsmeta="thursday">10:00AM - 11:30AM</td>
+                                <td class="wednesday ts-item" data-tsmeta="wednesday">2:00PM - 3:30PM</td>
+                                <td>Bret D. Bowers</td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
 </body>
 </html>
-
+{% endblock %}
 
