--- a/src/templates/admin/classlist.html
+++ b/src/templates/admin/classlist.html
@@ -4,6 +4,7 @@
 {% block main %}
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://cdn.ckeditor.com/4.14.1/standard/ckeditor.js"></script>
+
 <div class="page-header">
     <div class="page-block">
         <div class="row align-items-center">
@@ -18,19 +19,21 @@
                     <li class="breadcrumb-item">
                         <a href="{% url 'admin_home' %}"> <i class="fa fa-home"></i> </a>
                     </li>
-                    <li class="breadcrumb-item"><a href="">Class</a></li>
-                    <li class="breadcrumb-item"><a href="">View Class</a></li>
+                    <li class="breadcrumb-item"><a href="#">Class</a></li>
+                    <li class="breadcrumb-item"><a href="#">View Class</a></li>
                 </ul>
             </div>
         </div>
     </div>
 </div>
+
+<!-- CSS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
 <style>
     .table-container {
-        max-width: 900px;
+        max-width: 1000px;
         margin: 40px auto;
         padding: 20px;
         background: #fff;
@@ -44,11 +47,11 @@
         font-weight: bold;
     }
     .table th {
-        background-color:rgb(254, 195, 0);
+        background-color: rgb(254, 195, 0);
         color: white;
     }
     .btn-edit {
-        background-color:rgb(252, 203, 5);
+        background-color: rgb(252, 203, 5);
         color: white;
         padding: 5px 10px;
         border-radius: 5px;
@@ -70,15 +73,15 @@
 <div class="container">
     <div class="table-container">
         <h3>Class List</h3>
-        
+
         <table class="table table-striped">
             <thead>
                 <tr>
                     <th>#</th>
                     <th>Class Name</th>
                     <th>Trainer</th>
-                    <th>Schedule</th>
                     <th>Capacity</th>
+                    <th>Members</th>
                     <th>Actions</th>
                 </tr>
             </thead>
@@ -88,8 +91,16 @@
                     <td>{{ forloop.counter }}</td>
                     <td>{{ class.name }}</td>
                     <td>{{ class.trainer.first_name }} {{ class.trainer.last_name }}</td>
-                    <td>{{ class.schedule }}</td>
                     <td>{{ class.capacity }}</td>
+                    <td>
+                        {% if class.members.all %}
+                            {% for member in class.members.all %}
+                                {{ member.user.first_name }} {{ member.user.last_name }}{% if not forloop.last %}, {% endif %}
+                            {% endfor %}
+                        {% else %}
+                            <em>No Members</em>
+                        {% endif %}
+                    </td>
                     <td>
                         <a href="{% url 'edit_class' class.id %}" class="btn btn-edit">
                             <i class="fa fa-edit"></i> Edit
@@ -106,7 +117,7 @@
                 {% endfor %}
             </tbody>
         </table>
-        
+
         <div class="text-center mt-3">
             <a href="{% url 'add_class' %}" class="btn btn-success">
                 <i class="fa fa-plus"></i> Add New Class
