--- a/src/templates/admin_base.html
+++ b/src/templates/admin_base.html
@@ -263,7 +263,7 @@
                                 </ul>
                                 <ul class="pcoded-submenu">
                                     <li class=" ">
-                                        <a href="{% url 'member_attendance' %}" class="waves-effect waves-dark">
+                                        <a href="{% url 'attendance_report' %}" class="waves-effect waves-dark">
                                             <span class="pcoded-micon"><i class="ti-angle-right"></i></span>
                                             <span class="pcoded-mtext"
                                                   data-i18n="nav.basic-components.alert">View Attendence Report</span>
