--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -124,8 +124,7 @@
             <div class="col-lg-10 offset-lg-1">
                 <div class="cta-content">
                     <h2>Don’t <em>think</em>, begin <em>today</em>!</h2>
-                    <p>Ut consectetur, metus sit amet aliquet placerat, enim est ultricies ligula, sit amet dapibus odio
-                        augue eget libero. Morbi tempus mauris a nisi luctus imperdiet.</p>
+                    
                     <div class="main-button scroll-to-section">
                         <a href="#our-classes">Become a member</a>
                     </div>
@@ -143,8 +142,7 @@
                 <div class="section-heading">
                     <h2>Our <em>Classes</em></h2>
                     <img src="{% static 'assets/images/line-dec.png' %}" alt="">
-                    <p>Nunc urna sem, laoreet ut metus id, aliquet consequat magna. Sed viverra ipsum dolor, ultricies
-                        fermentum massa consequat eu.</p>
+                    
                 </div>
             </div>
         </div>
@@ -166,45 +164,45 @@
                 <section class='tabs-content'>
                     <article id='tabs-1'>
                         <img src="{% static 'assets/images/training-image-01.jpg' %}" alt="First Class">
-                        <h4>First Training Class</h4>
+                        <h4>GYM Training Class</h4>
                         <p>Phasellus convallis mauris sed elementum vulputate. Donec posuere leo sed dui eleifend
                             hendrerit. Sed suscipit suscipit erat, sed vehicula ligula. Aliquam ut sem fermentum sem
                             tincidunt lacinia gravida aliquam nunc. Morbi quis erat imperdiet, molestie nunc ut,
                             accumsan diam.</p>
                         <div class="main-button">
-                            <a href="#">View Schedule</a>
+                            <a href="#">View Details</a>
                         </div>
                     </article>
                     <article id='tabs-2'>
                         <img src="{% static 'assets/images/training-image-02.jpg' %}" alt="Second Training">
-                        <h4>Second Training Class</h4>
+                        <h4>Cardio Training Class</h4>
                         <p>Integer dapibus, est vel dapibus mattis, sem mauris luctus leo, ac pulvinar quam tortor a
                             velit. Praesent ultrices erat ante, in ultricies augue ultricies faucibus. Nam tellus nibh,
                             ullamcorper at mattis non, rhoncus sed massa. Cras quis pulvinar eros. Orci varius natoque
                             penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
                         <div class="main-button">
-                            <a href="#">View Schedule</a>
+                            <a href="#">View Details</a>
                         </div>
                     </article>
                     <article id='tabs-3'>
                         <img src="{% static 'assets/images/training-image-03.jpg' %}" alt="Third Class">
-                        <h4>Third Training Class</h4>
+                        <h4>Functional Training Class</h4>
                         <p>Fusce laoreet malesuada rhoncus. Donec ultricies diam tortor, id auctor neque posuere sit
                             amet. Aliquam pharetra, augue vel cursus porta, nisi tortor vulputate sapien, id scelerisque
                             felis magna id felis. Proin neque metus, pellentesque pharetra semper vel, accumsan a
                             neque.</p>
                         <div class="main-button">
-                            <a href="#">View Schedule</a>
+                            <a href="#">View Details</a>
                         </div>
                     </article>
                     <article id='tabs-4'>
                         <img src="{% static 'assets/images/training-image-04.jpg' %}" alt="Fourth Training">
-                        <h4>Fourth Training Class</h4>
+                        <h4>Weight Training Class</h4>
                         <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
                             Aenean ultrices elementum odio ac tempus. Etiam eleifend orci lectus, eget venenatis ipsum
                             commodo et.</p>
                         <div class="main-button">
-                            <a href="#">View Schedule</a>
+                            <a href="#">View Details</a>
                         </div>
                     </article>
                 </section>
@@ -221,8 +219,7 @@
                 <div class="section-heading dark-bg">
                     <h2>Classes <em>Schedule</em></h2>
                     <img src="assets/images/womengym.jpg" alt="">
-                    <p>Nunc urna sem, laoreet ut metus id, aliquet consequat magna. Sed viverra ipsum dolor, ultricies
-                        fermentum massa consequat eu.</p>
+                    
                 </div>
             </div>
         </div>
@@ -230,7 +227,8 @@
             <div class="col-lg-12">
                 <div class="filters">
                     <ul class="schedule-filter">
-                        <li class="active" data-tsfilter="monday">Monday</li>
+                        <li class="active" data-tsfilter="Sunday">Sunday</li>
+                        <li data-tsfilter="monday">Monday</li>
                         <li data-tsfilter="tuesday">Tuesday</li>
                         <li data-tsfilter="wednesday">Wednesday</li>
                         <li data-tsfilter="thursday">Thursday</li>
